--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "ant-design-vue": "^2.0.0-rc.1",
     "axios": "^0.21.0",
-    "axios-retry": "^3.1.9",
     "core-js": "^3.6.5",
+    "element-plus": "^1.0.1-beta.0",
     "swiper": "^6.3.5",
     "vue": "^3.0.3",
     "vue-loader": "^16.0.0",
@@ -31,6 +30,7 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.13.1",
     "eslint": "^7.14.0",
     "eslint-plugin-vue": "^7.1.0",
