--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "core-js": "^3.6.5",
     "element-plus": "^1.0.1-beta.0",
     "swiper": "^6.3.5",
-    "vue": "^3.0.0",
+    "vue": "^3.0.3",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
@@ -36,7 +36,8 @@
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
     "sass-resources-loader": "^2.1.1",
-    "typescript": "~3.9.3"
+    "typescript": "~3.9.3",
+    "vue-loader": "^15.9.5"
   },
   "eslintConfig": {
     "root": true,
